# RTK_robot

./: README.md
Frob_gorod/: GUI_path.py  saved_environment.json  saved_path.json  signs_visualizer.py
Frob_gorod/arduino2_code/: arduino2_code.ino  ros2_communication.hpp
Frob_gorod/arduino_code/: arduino_code.ino  ros2_communication.hpp
Frob_gorod/ros2_ws/install/: local_setup.sh  setup.sh
Frob_gorod/ros2_ws/log/: latest_build
Frob_gorod/ros2_ws/src/gorod_main_pkg/: CMakeLists.txt
Frob_gorod/ros2_ws/src/image_display/: package.xml  setup.py
Frob_gorod/ros2_ws/src/image_processor/: README.md  package.xml  setup.py
Frob_gorod/src/frob_navigation/config/: nav2_params.yaml  nav2_params_old_work.yaml
Frob_gorod/src/frob_navigation/maps/: andrey_map.pgm  andrey_map.yaml  hata.pgm  hata.yaml  map.pgm  map.yaml  map_good.pgm  map_good.yaml  map_высокий лидар.pgm  map_высокий лидар.yaml
Frob_neft/: README.md
Frob_neft/arduino_code/: arduino_code.ino  motor_regulator.h  ros2_communication.hpp  sensors.hpp
Frob_neft/first_neft (old)/arduino2_code/: arduino2_code.ino  motor_regulator.h  ros2_communication.hpp
Frob_neft/first_neft (old)/image_publisher_pkg/: package.xml  setup.py
Frob_neft/first_neft (old)/image_publisher_pkg/image_publisher_pkg/: image_publisher_node.py
Frob_ogorod/: README.md
Frob_ogorod/arduino_code/: arduino_code.ino  ros2_communication.hpp
Frob_ogorod/ros2_ws/src/ogorod_main_pkg/: CMakeLists.txt  package.xml
Frob_ogorod/ros2_ws/src/ogorod_main_pkg/launch/: bringup.launch.py
src/arduino/sketch/: sketch.ino
(+83 files in other folders)
