<?xml version="1.0"?>
<package format="3">
  <name>ogorod_main_pkg</name>
  <version>0.1.0</version>
  <description>Meta-package for managing all robot components</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>ros2_arduino_bridge</exec_depend>
  <exec_depend>image_publisher_pkg</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
